fix(css): fix bad line breaking and hyphenation on mobile
This was being caused by `p { text-wrap: pretty }`.

--- a/styles.css
+++ b/styles.css
@@ -49,9 +49,6 @@
         overflow-wrap: break-word;
     }
 
-    p {
-        text-wrap: pretty;
-    }
     h1,
     h2,
     h3,
@@ -176,10 +173,8 @@
     body {
         font-family: var(--font-family-serif);
         font-size: var(--font-size-base);
-        font-weight: 400;
         text-align: justify;
         hyphens: auto;
-        -webkit-hyphens: auto;
     }
 
     p + p {
